// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Placeholder should render a default component 1`] = `
<div
  className="placeholder"
>
  <div
    className="inner"
  >
    <p
      className="title"
    />
  </div>
</div>
`;

exports[`Placeholder should show with a title 1`] = `
<div
  className="placeholder"
>
  <div
    className="inner"
  >
    <p
      className="title"
    >
      test
    </p>
  </div>
</div>
`;
